--- a/loja 'site'/styles.css
+++ b/loja 'site'/styles.css
@@ -3,6 +3,9 @@ body {
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
+    width: 100%;
+    margin: 0;
+    font-family: Arial, sans-serif;
 }
 
 header {
@@ -58,10 +61,6 @@ footer {
     bottom: 0;
     width: 100%;
 }
-body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-}
 
 .carousel {
     position: relative;
@@ -86,7 +85,7 @@ body {
 }
 
 .imagensvender {
-    width: 300px;
+    width: 100%;
     text-align: center;
 }
 
